--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 
                 <!-- Photo Details Section -->
                 <div class="col-12 details mt-3 p-2">
-                    <p class="location">Location: </p>
-                    <p class="description">Description: </p>
-                    <p class="date">Date: </p>
+                    <p class="name">Title: </p>
+                    <p class="gods">gods: </p>
+                    <p class="type">type: </p>
+                    <p class="effect"> </p>
+                    <p class="quote"> </p>
+                    <p class="ability"> </p>
                 </div>
             </div>
         </div>
