--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <body>
     <div class="container my-4">
         <div id="photoBooth" class="text-center bg-white p-3 rounded shadow-sm mx-auto">
-            <h1 class="banner mb-3">IS219 Slide Show</h1>
+            <h1 class="name banner mb-3"></h1>
+            <h1 class="gods banner mb-3"></h1>
             <div id="slideShow" class="row justify-content-center">
 
                 <!-- Photo Holder Section -->
@@ -42,12 +43,10 @@
 
                 <!-- Photo Details Section -->
                 <div class="col-12 details mt-3 p-2">
-                    <p class="name">Title: </p>
-                    <p class="gods">gods: </p>
-                    <p class="type">type: </p>
-                    <p class="effect"> </p>
-                    <p class="quote"> </p>
-                    <p class="ability"> </p>
+                    <p class="type"></p>
+                    <p class="effect"></p>
+                    <p class="quote"></p>
+                    <p class="ability"></p>
                 </div>
             </div>
         </div>
