Apply final styling and layout adjustments

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 </head>
 
 <body>
-    <div class="container my-4">
-        <div id="photoBooth" class="text-center bg-white p-3 rounded shadow-sm mx-auto">
+    <div class="container-fluid ">
+        <div id="photoBooth" class="text-center  p-3 rounded shadow-sm mx-auto">
             <h1 class="name banner mb-3"></h1>
             <h1 class="gods banner mb-3"></h1>
             <div id="slideShow" class="row justify-content-center">
 
                 <!-- Photo Holder Section -->
-                <div class="col-12 col-md-8 photoHolder mb-3">
+                <div class="col-lg-12 col-md-8 photoHolder mb-3">
                     <img class="thumbnail img-fluid" id="photo"
                         src="https://via.placeholder.com/518x389?text=Welcome+to+my+Gallery" alt="Gallery Image" />
                 </div>
 
                 <!-- More Indicator and Navigation Controls -->
-                <div class="col-12 text-center my-2">
+                <div class=" col-lg-12 text-center my-2">
                     <img class="moreIndicator rot90 img-fluid" src="img/more.png" alt="More Content" />
                 </div>
                 <div id="nav" class="col-12 d-flex justify-content-between">
@@ -42,7 +42,7 @@
                 </div>
 
                 <!-- Photo Details Section -->
-                <div class="col-12 details mt-3 p-2">
+                <div class=" col-lg-12 details mt-3 p-2">
                     <p class="type"></p>
                     <p class="effect"></p>
                     <p class="quote"></p>
