--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
     <div class="container-fluid ">
+        <div id="invis" class="invis"></div>
         <div id="photoBooth" class="text-center  p-3 rounded shadow-sm mx-auto">
             <h1 class="name banner mb-3"></h1>
             <h1 class="gods banner mb-3"></h1>
@@ -29,7 +30,7 @@
                 <!-- Photo Holder Section -->
                 <div class="col-lg-12 col-md-8 photoHolder mb-3">
                     <img class="thumbnail img-fluid" id="photo"
-                        src="https://via.placeholder.com/518x389?text=Welcome+to+my+Gallery" alt="Gallery Image" />
+                        src="" alt="Gallery Image" />
                 </div>
 
                 <!-- More Indicator and Navigation Controls -->
