--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!-- Photo Holder Section -->
                 <div class="col-lg-12 col-md-8 photoHolder mb-3">
                     <img class="thumbnail img-fluid" id="photo"
-                        src="" alt="Gallery Image" />
+                        src="img/myImages/drachma.png" alt="Gallery Image" />
                 </div>
 
                 <!-- More Indicator and Navigation Controls -->
